feat: add a new route - PUT("/courses/{id}") and it's testing code